# yang-mills-gap

./: .gitignore  CLAIM_DISCIPLINE.md  README.md  ROADMAP.md  pyproject.toml
docs/: 00_problem_statement.md  01_rqm_mass_gap_hypothesis.md  02_su2_as_unit_quaternions.md  02_su2_quaternionic_representation.md  03_lattice_yang_mills_baseline.md  04_closure_defect_and_wilson_action.md  04_closure_resonance_interpretation.md  05_anchor_deformation_warning.md  05_glueball_correlator_mass_gap.md  06_proof_roadmap.md  06_rqm_anchor_deformations_nonstandard.md  07_proof_roadmap.md  08_closure_resonance_roadmap.md  09_curvature_closure_proof.md  10_closure_coercivity_lemma.md  finite_lattice_claim_boundary.md
experiments/: exp_001_quaternion_su2_sanity.py  exp_001_su2_plaquette_sanity.py  exp_002_plaquette_closure_defect.py  exp_002_wilson_action_metropolis.py  exp_003_glueball_correlator.py  exp_003_wilson_action_metropolis.py  exp_004_effective_mass_plateau.py  exp_004_glueball_correlator.py  exp_005_closure_defect_histograms.py  exp_005_effective_mass_plateau.py  exp_006_rqm_anchor_deformation.py  exp_006_rqm_anchor_deformation_nonstandard.py  exp_007_full_vs_local_metropolis_sanity.py  exp_008_diagnostic_run_packet.py  exp_009_correlator_run_packet.py  exp_010_beta_seed_sweep_packets.py  exp_011_larger_spectroscopy_sweep.py  inspect_latest_packet.py  inspect_latest_sweep.py
tests/: test_baseline_contract.py  test_candidate.py  test_claim_discipline.py  test_correlators.py  test_diagnostics.py  test_effective_mass.py  test_exp_009_helpers.py  test_experiment_driver.py  (+16 more)
(+32 files in other folders)
