[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rqm-yang-mills"
version = "0.1.0"
description = "Exploratory SU(2) lattice Yang-Mills research code in unit-quaternion coordinates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RQM Technologies" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[tool.hatch.build.targets.wheel]
packages = ["src/rqm_yang_mills"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
