[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yang-mills-gap"
version = "0.1.0"
description = "Finite-lattice SU(2) Wilson-action diagnostics for a curvature-closure Yang-Mills proof program."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RQM Technologies" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[tool.hatch.build.targets.wheel]
packages = ["src/yang_mills_gap"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
